--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "flowbite": "^2.5.2",
     "jwt-decode": "^4.0.0",
+    "netlify-cli": "^18.0.3",
     "ngx-dropzone": "^3.1.0",
     "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^17.0.2",
